--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vaadin.demo</groupId>
 	<artifactId>StreetFoodAdminCP</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1</version>
 	<packaging>war</packaging>
 
 	<properties>
@@ -129,11 +129,16 @@
 			<version>${vaadin.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>com.vaadin.addon</groupId>
 			<artifactId>vaadin-charts</artifactId>
 			<version>2.0.0</version>
-		</dependency>
+		</dependency>-->
+                 <dependency>
+                    <groupId>com.vaadin.addon</groupId>
+                    <artifactId>vaadin-charts</artifactId>
+                    <version>3.0.0-alpha5</version>
+                </dependency>
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>googleanalyticstracker</artifactId>
@@ -192,8 +197,37 @@
                     <version>4.1.6.RELEASE</version>
                     <type>jar</type>
                 </dependency>
-
-
+                
+                
+                <dependency>
+                    <groupId>org.vaadin.addons</groupId>
+                    <artifactId>activelink</artifactId>
+                    <version>7.3.1</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.vaadin</groupId>
+                    <artifactId>suggestfield</artifactId>
+                    <version>0.0.4</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.vaadin.addons</groupId>
+                    <artifactId>fontawesomelabel</artifactId>
+                    <version>1.3.0</version>
+                 </dependency>
+                 
+                 <dependency>
+                    <groupId>org.vaadin.addons</groupId>
+                    <artifactId>wizards-for-vaadin</artifactId>
+                    <version>1.1.0</version>
+                 </dependency>
+	 <dependency>
+	  <groupId>com.google.code.gson</groupId>
+	  <artifactId>gson</artifactId>
+	  <version>2.2</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
@@ -239,9 +273,9 @@
 						</configuration>
 						<goals>
 							<goal>resources</goal>
-              <goal>update-theme</goal>
+                                                        <goal>update-theme</goal>
 							<goal>update-widgetset</goal>
-              <goal>compile-theme</goal>
+                                                        <goal>compile-theme</goal>
 							<goal>compile</goal>
 						</goals>
 					</execution>
